# openai_learning

./: .gitignore  README.md  app.py  pyproject.toml
openai_learning/_typing/: __init__.py  _typing.py
openai_learning/app/: __init__.py  current_app.py
openai_learning/openai_functools/: __init__.py  _functools.py
openai_learning/setting/: __init__.py  read_ini.py
openai_learning/utils/: __init__.py  _function.py
