[project]
name = "openai_learning"
version = "0.1.0"
description = ""
authors = [
    {name = "a129924", email = "a129924@gmail.com"},
]
dependencies = [
    "openai>=1.10.0",
    "transformers>=4.37.2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
